# ansible-project

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DOCUMENTACION.md  Jenkinsfile  Makefile  QUICKSTART.md  README.md  REFACTORING-SUMMARY.md  WORKFLOW-CI-CD.md  config.env  pyproject.toml
ansible/: AUTOSCALING-SUMMARY.md  AUTOSCALING.md  CHANGELOG.md  EXAMPLES.md  README.md  REFACTORING.md  RESOURCE-LIMITS.md  requirements.txt  requirements.yml
ansible/group_vars/: all.yml  gcp.yml
ansible/inventory/: hosts
ansible/playbooks/: build-images.yml  create-cluster.yml  delete-cluster.yml  deploy-gcp.yml  deploy.yml  update-cluster.yml
ansible/roles/deploy-app/: README.md
ansible/roles/deploy-app/tasks/: main.yaml
docs/: CHECKLIST.md  ESTRUCTURA.md  FIX-FRONTEND-BLANK-PAGE.md  GUIA-REDESPLIEGUE.md  QUICK-START.md  README-GCP-DEPLOYMENT.md  RESUMEN-CAMBIOS.md  SCRIPTS-CLEANUP-2025-10-23.md  SIMPLIFICATION-2025-10-23.md  TODO-APP.md  WORKFLOW.md
jenkins/: .gitignore  ARCHITECTURE-DIAGRAM.md  IMPLEMENTATION-SUMMARY.md  JENKINS-VS-GITHUB-ACTIONS.md  QUICK-REFERENCE.md  QUICKSTART.md  README.md  START-HERE.md  TROUBLESHOOTING-DOCKER.md  TROUBLESHOOTING-GCLOUD.md  UPDATE-PROJECT-ID.md  github-actions-example.yml  jenkins-values.yaml  setup-jenkins.fish  setup-jenkins.sh
kubernetes/base/: backend.yaml  frontend.yaml
kubernetes/gcp/: backend-config.yaml  backend-gcp.yaml  db-gcp.yaml  frontend-gcp.yaml  ingress-gcp.yaml
scripts/: README.md  create-cluster.fish  delete-cluster.fish  deploy.fish  push-images.fish  recreate-cluster.fish  utils.fish
src/app/backend/: server.js
src/app/db/: Dockerfile
src/app/frontend/: .env.production  Dockerfile  nginx.conf  package-lock.json  vite.config.js
src/app/frontend/src/: App.jsx  config.dev.js  config.js
tests/: conftest.py  test_deploy.py  test_structure.py
