[project]
name = "ansible-project"
version = "0.1.0"
description = "Kubernetes Todo App deployment using Ansible and cloud-native tools"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "UNSA Cloud Team", email = "cloud@unsa.edu.pe" }
]
keywords = ["ansible", "kubernetes", "docker", "devops", "cloud-native"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "ansible>=10.0.0",
    "kubernetes>=29.0.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "ansible-lint>=24.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/unsa-cloud/ansible-project"
Repository = "https://github.com/unsa-cloud/ansible-project"
Documentation = "https://github.com/unsa-cloud/ansible-project/blob/main/README.md"

[dependency-groups]
dev = [
    "ansible-lint>=24.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501"]  # line too long

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--cov=scripts",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["scripts"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]
